# containers

./: .dccache  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  README.md  response.txt
BRH-notebooks/: Dockerfile
HEAL-combined/: Dockerfile  README.md
HEAL-notebooks/: Dockerfile  README.md
HEAL-notebooks/generic_rkernel/: heal-welcome.ipynb  heal-welcome.md  pyproject.toml  requirements.txt
azlinux-jupyter-nextflow/: Dockerfile  Dockerfile_checked
azlinux-jupyter-scipy/: Dockerfile  README.md  resource_file_urls.txt
brh-generic/: Dockerfile
brh-notebooks/: Dockerfile
brh-tutorials/: Dockerfile
jupyter/: Dockerfile
jupyter-6.4.0/: Dockerfile  README.md
jupyter-6.4.0-with-base-packages/: Dockerfile  README.md  requirements.txt
jupyter-VPODC-ml/: Dockerfile  cull_idle_servers.py
jupyter-account/: Dockerfile  README.md
jupyter-bacpac/: Dockerfile
jupyter-bih/: Dockerfile  requirements.txt
jupyter-brain/: Dockerfile  README.md  docker_command_backup.txt  extract_subcortical.sh  license  outlierDetection.sh
jupyter-cdcdea/: README.md
jupyter-cdcwonder/: Dockerfile  README.md
jupyter-covid19/: Dockerfile
jupyter-covid19-restrict-download/: Dockerfile  README.md  jupyterslim.yaml
jupyter-daids/: Dockerfile
jupyter-dait/: Dockerfile
jupyter-dmid/: Dockerfile
jupyter-geo/: Dockerfile
jupyter-heal/: Dockerfile  README.md
jupyter-ibd/: Dockerfile  install_packages.R  requirements.txt
jupyter-jcoin/: Dockerfile
jupyter-midrc/: requirements.txt
jupyter-nde-base/: Dockerfile  cull_idle_servers.py  jupyter_notebook_config.py
jupyter-nextflow/: Dockerfile  nextflow-welcome.html
jupyter-niaid/: Dockerfile
jupyter-oeps/: Dockerfile  README.md
jupyter-prometheus/: Dockerfile  requirements.txt
jupyter-pystata/: Dockerfile  README.md  dockerstart.sh
jupyter-pystata-gen3-licensed/: .gitignore  Dockerfile  README.md
jupyter-pystata-licensed/: Dockerfile  README.md
jupyter-pystata-user-licensed/: .gitignore  Dockerfile  README.md  dockerstart.sh  unlicensed.Dockerfile
jupyter-rcc/: Dockerfile  README.md  requirements.txt  start-notebook.sh  verify_workspace.py
jupyter-restrict-download/: Dockerfile
jupyter-restricted-download/: Dockerfile  README.md
jupyter-slim/: Dockerfile  README.md  jupyterslim.yaml
jupyter-tb/: Dockerfile
jupyter-vadc/: Dockerfile
jupyterlab-generic/: Dockerfile  build.sh  jupyterlab-start.sh  run.sh
vlmd-submission-tools/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
vlmd-submission-tools/tests/: test_common_utils.py  test_mapping_utils.py  test_subcommand.py  test_subcommand_get_dictionary_url.py  test_subcommand_hello_world.py  test_subcommand_read_and_validate_dictionary.py  test_subcommand_upload_dictionary_to_mds.py  utils.py
vlmd-submission-tools/tests/templates/: template_submission.json  template_submission.tsv  template_submission_bad_format.csv  template_submission_invalid.json  template_submission_invalid.tsv  template_submission_minimal.json  template_submission_small.csv  template_submission_small.json  template_submission_small.tsv
vlmd-submission-tools/vlmd_submission_tools/: __main__.py
vlmd-submission-tools/vlmd_submission_tools/common/: config.py  fields.json  logger.py  mapping_utils.py  schemas.py  utils.py
vlmd-submission-tools/vlmd_submission_tools/subcommands/: __init__.py  base.py  get_dictionary_url.py  hello_world.py  read_and_validate_dictionary.py  upload_dictionary_to_mds.py
(+200 files in other folders)
