[tool.poetry]
name = "vlmd-submission-tools"
description = "CLI with subcommands that support the VLMD workflows."
version = "0.1.0"
repository = "https://github.com/uc-cdis/vlmd-submission-tools"
authors = ["George Thomas <george42@uchicago.edu>"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
packages = [
    { include = "vlmd_submission_tools" },
]

[tool.poetry.scripts]
vlmd-submission-tools = 'vlmd_submission_tools.__main__:main'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
PyYAML = "^6.0"
urllib3 = "1.26.9"
boto3 = "^1.26.122"
kubernetes = "^26.1.0"
petl = "^1.7.12"
frictionless = "^5.12.1"
parameterized = "^0.9.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses=true
line_length = 88
