[tool.poetry]
name = "vlmd-submission-tools"
description = "CLI with subcommands that support the VLMD workflows."
version = "2.1.0"
repository = "https://github.com/uc-cdis/vlmd-submission-tools"
authors = ["Center for Translational Data Science at the University of Chicago <support@gen3.org>"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
packages = [
    { include = "vlmd_submission_tools" },
]

[tool.poetry.scripts]
vlmd-submission-tools = 'vlmd_submission_tools.__main__:main'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"
PyYAML = "^6.0"
urllib3 = ">=1.26.9"
heal-sdk = ">=1.0.1"
kubernetes = "^26.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
requests-mock = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses=true
line_length = 88
