[tool.poetry]
name = "HEAL Generic Jupyter Notebook"
version = "1.0.0"
description = "HEAL Generic Jupyter Notebook"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
repository = "https://github.com/uc-cdis/jupyter-superslim"
include = []
package-mode = false


[tool.poetry.dependencies]
python = "^3.14"
gen3 = "^4.28.1"
cdiserrors = "*"
heal-sdk = "^1.21.0"
scikit-learn = "^1.9.0"
seaborn = "^0.13.2"
matplotlib = "^3.11.1"
plotly = "^6.9.0"
itables = "^2.9.0"
pyreadstat = "^1.3.5"
openpyxl = "^3.1.5"
mystmd = "^1.10.1"
altair = {extras = ["all"], version = "^6.2.2"}
frictionless = "^5.19.0"
pandas = "^3.0.3"
numpy = "^2.5.1"
scipy = "^1.18.0"
pygwalker = "^0.5.0.1"

# Jupyter plugins and utilities section
jupyter-lsp = "^2.3.1"
jupyterlab-lsp = "^5.3.0"
python-lsp-server = {extras = ["all"], version = "^1.14.0"}
jupyterlab-search-replace = "^1.1.3"
jupyterlab-git = "^0.54.0"
jupyterlab_myst = "^2.7.0"
jupyter-myst-build-proxy = "^0.6.0"
jupyter_server_ydoc = "^2.4.1"
jupyter-archive = "^3.4.0"

[build-system]
requires = ["poetry>=2.0.0"]
build-backend = "poetry.masonry.api"
